<resources>
    <string name="app_name">Komcity.ru</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="google_maps_key">AIzaSyBSYCnoSBckEmQ2bhsVz9MIjWNPzVcyMog</string>
    <string name="title_activity_map_price">Map</string>

    <string name="title_default">Заголовок окна</string>
    <string name="input_prod_name_default">Введите наименование товара</string>
    <string name="input_prod_price_default">Введите Цену товара</string>
    <string name="input_market_name_default">Введите название магазина</string>
    <string name="input_select_default">Выберите значение</string>
    <string name="spinner_select_default">&lt;Выберите из списка&gt;</string>
    <string name="menu_other">Прочее</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_exit">Выход</string>

    <string name="msg_empty_prod_name">Наименование товара не может быть пустым!</string>
    <string name="msg_empty_prod_price">Цена товара не может быть пустым!</string>
    <string name="msg_empty_prod_less_zero">Цена товара не может меньше 0!</string>
    <string name="msg_empty_market_name">Название магазина не может быть пустым!</string>
    <string name="msg_not_contains_number">Значение должно содержать цифры!</string>
    <string name="msg_access_deny_location">Доступ к определению координат запрещен.\nВы не сможете видеть цены и магазины в близи себя!</string>

    <string name="btn_add_product_default">Добавить</string>
    <string name="btn_add_product_cancel">Отмена</string>
    <string name="email_for_send">our_city@komcity.ru</string>
    <string name="copied_text">Скопировано</string>
    <string name="copy_text">Скопировать текст</string>
    <string name="info_share_only_text">Вы сможете поделиться только текстом</string>

    <string name="Product">Продукт</string>
    <string name="Address">Адрес</string>
    <string name="Price">Цена</string>
    <string name="share_to_social">Поделиться</string>

    <string name="menu_icon_news">Календарь</string>
    <string name="menu_name_news">Новости</string>
    <string name="menu_name_forum">Форум</string>
    <string name="menu_name_announcement">Объявления</string>
    <string name="menu_name_price_map">Карта цен</string>

    <string name="title_news">Просмотр новости</string>
    <string name="title_forum">Просмотр форумов</string>
    <string name="title_announcement">Просмотр объявлений</string>
    <string name="title_map">КАРТА</string>
    <string name="title_list">СПИСОК</string>
    <string name="title_favorite">ИЗБРАННОЕ</string>

    <string name="an_select_category">Выберите категорию</string>
    <string name="an_select_last_value">Выберите значение в последнем списке</string>
    <string name="an_empty_section">В данной рубрике объявлений нет</string>
    <string name="an_select_all">Выберите все необходимые значения из списков</string>
    <string name="an_show_all">Показать</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
