<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/vector_ic_news"
            android:title="@string/menu_name_news" />
        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/vector_ic_forum"
            android:title="@string/menu_name_forum" />
        <item
            android:id="@+id/nav_announcement"
            android:icon="@drawable/vector_ic_announcement"
            android:title="@string/menu_name_announcement" />
        <item
            android:id="@+id/nav_map_price"
            android:icon="@drawable/vector_ic_market_location"
            android:title="@string/menu_name_price_map"
            android:visible="false" />
    </group>

    <item android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/vector_ic_exit"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
