<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.komcity.android.pricemap.MapPriceListFragment">

    <RelativeLayout
        android:id="@+id/group_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/title_list"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_logo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="" />

            <TextView
                android:id="@+id/lbl_product_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Product" />

            <TextView
                android:id="@+id/lbl_product_address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Address"/>

            <TextView
                android:id="@+id/lbl_product_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Price"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/prod_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_list"/>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnAddFloat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/vector_ic_plus_black"
        app:backgroundTint="@color/colorPrimary"
        app:borderWidth="1dp"
        app:fabSize="normal" />
</FrameLayout>
