<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/group_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lbl_title_height"
        android:background="#4CAF50" >

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/lbl_title_height"
            android:layout_height="@dimen/lbl_title_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/vector_ic_komcity_logo" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_title">

        <RelativeLayout
            android:id="@+id/group_prod_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/lbl_prod_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/input_prod_name_default"/>

            <Spinner
                android:id="@+id/lst_prod_type"
                android:layout_below="@+id/lbl_prod_name_text"
                style="@style/spinner_price_dialog"/>

            <Spinner
                android:id="@+id/lst_prod_subtype"
                android:layout_below="@+id/lst_prod_type"
                style="@style/spinner_price_dialog"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/group_prod_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/group_prod_name"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/lbl_prod_price_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text=""
                android:hint="@string/input_prod_price_default"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/group_market"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/group_prod_price"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/lbl_market_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/btn_geo"
                android:layout_toStartOf="@+id/btn_geo"
                android:inputType="textPostalAddress"
                android:hint="@string/input_market_name_default" />

            <ImageButton
                android:id="@+id/btn_geo"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/vector_ic_geo" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_bottom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/btn_add_margin_top"
        android:layout_marginBottom="@dimen/btn_add_margin_bottom"
        android:layout_below="@+id/group_body" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/spinner_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btn_add_product_cancel" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/spinner_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btn_add_product_default" />
    </RelativeLayout>
</RelativeLayout>